versions/v2.12/modules/en/pages/security/security-overview.adoc
= {rancher-product-name} Security Guides
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2026-06-25
:page-revdate: {revdate}
:community-path: reference-guides/rancher-security/index.adoc 
:product-path: security/security-overview.adoc
ifeval::["{build-type}" != "community"]
:url-security-overview: https://documentation.suse.com/cloudnative/security/{neuvector-docs-version}/en/overview.html
:url-rke2-landing-page: https://documentation.suse.com/en-us/cloudnative/rke2/
:url-k3s-landing-page: https://documentation.suse.com/en-us/cloudnative/k3s/
:url-rke2-cis-self-assessment19: https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment19.html
:url-rke2-hardening-guide: https://documentation.suse.com/cloudnative/rke2/latest/en/security/hardening_guide.html
:url-rke2-cis-self-assessment110: https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment110.html
:url-rke2-cis-self-assessment111: https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment111.html
:url-rke2-cis-self-assessment112: https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment112.html
:url-k3s-self-assessment-1.9: https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.9.html
:url-k3s-hardening-guide: https://documentation.suse.com/cloudnative/k3s/latest/en/security/hardening-guide.html
:url-k3s-self-assessment-1.10: https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.10.html
:url-k3s-self-assessment-1.11: https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.11.html
:url-k3s-self-assessment-1.12: https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.12.html
:xref-manage-rbac: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/manage-role-based-access-control-rbac.adoc
:xref-compliance-scans-howto: xref:security/compliance-scans/how-to.adoc
:xref-selinux-rpm: xref:security/selinux-rpm/selinux-rpm.adoc
:xref-neuvector: xref:integrations/neuvector/neuvector.adoc
:xref-cves: xref:security/cves.adoc
:xref-security-best-practices: xref:security/rancher-security-best-practices.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:url-security-overview: https://open-docs.neuvector.com/{neuvector-docs-version}/basics/overview
:url-rke2-landing-page: https://docs.rke2.io/
:url-k3s-landing-page: https://docs.k3s.io/
:url-rke2-cis-self-assessment19: https://docs.rke2.io/security/cis_self_assessment19
:url-rke2-hardening-guide: https://docs.rke2.io/security/hardening_guide
:url-rke2-cis-self-assessment110: https://docs.rke2.io/security/cis_self_assessment110
:url-rke2-cis-self-assessment111: https://docs.rke2.io/security/cis_self_assessment111
:url-rke2-cis-self-assessment112: https://docs.rke2.io/security/cis_self_assessment112
:url-k3s-self-assessment-1.9: https://docs.k3s.io/security/self-assessment-1.9
:url-k3s-hardening-guide: https://docs.k3s.io/security/hardening-guide
:url-k3s-self-assessment-1.10: https://docs.k3s.io/security/self-assessment-1.10
:url-k3s-self-assessment-1.11: https://docs.k3s.io/security/self-assessment-1.11
:url-k3s-self-assessment-1.12: https://docs.k3s.io/security/self-assessment-1.12
:xref-manage-rbac: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/index.adoc
:xref-compliance-scans-howto: xref:how-to-guides/advanced-user-guides/compliance-scan-guides/index.adoc
:xref-selinux-rpm: xref:reference-guides/rancher-security/selinux-rpm/index.adoc
:xref-neuvector: xref:integrations-in-rancher/neuvector/index.adoc
:xref-cves: xref:reference-guides/rancher-security/security-advisories-and-cves.adoc
:xref-security-best-practices: xref:reference-guides/rancher-security/rancher-security-best-practices.adoc
endif::[]

[pass]
<table width="100%">
  <tr style="vertical-align: top;text-align: center;border-bottom-style: none;border-top-style: solid;border-top-width: 2px;border-top-color: #c0c2c4;">
    <td width="30%">
      <h4>Security policy</h4><br/>
      <p style={{padding: '8px'}}>Rancher Labs supports responsible disclosure, and endeavours to resolve all issues in a reasonable time frame. </p>
    </td>
    <td width="30%">
      <h4>Reporting process</h4><br/>
      <p style={{padding: '8px'}}>Please submit possible security issues by emailing <a href="mailto:security-rancher@suse.com">security-rancher@suse.com</a> .</p>
    </td>
    <td width="30%">
      <h4>Announcements</h4><br/>
      <p style={{padding:'8px'}}>Subscribe to the <a href="https://forums.rancher.com/c/announcements">Rancher announcements forum</a> for release updates.</p>
    </td>
  </tr>
</table>

Security is at the heart of all Rancher features. From integrating with all the popular authentication tools and services, to an enterprise grade {xref-manage-rbac}[RBAC capability], Rancher makes your Kubernetes clusters even more secure.

On this page, we provide security related documentation along with resources to help you secure your Rancher installation and your downstream Kubernetes clusters.

== {neuvector-product-name} Integration with Rancher

NeuVector is an open-source, container-focused security application that is now integrated into Rancher. NeuVector provides production security, DevOps vulnerability protection, and a container firewall, et al. Please see the {xref-neuvector}[Rancher docs] and the {url-security-overview}[{neuvector-product-name} docs] for more information.

== Running a Compliance Security Scan on a Kubernetes Cluster

Rancher leverages https://github.com/aquasecurity/kube-bench[kube-bench] to run a security scan to check whether Kubernetes is deployed according to security best practices.

When Rancher runs a Compliance scan on a cluster, it generates a report showing the results of each test, including a summary with the number of passed, skipped and failed tests. The report also includes remediation steps for any failed tests.

For details, refer to the section on {xref-compliance-scans-howto}[security scans].

== SELinux RPM

We provide three RPMs (RPM Package Manager) that enable Rancher products to function properly on SELinux-enforcing hosts: `rancher-selinux`, `rke2-selinux` and `k3s-selinux`.  For details, see {xref-selinux-rpm}[this page].

== Rancher Hardening Guide

The Rancher Hardening Guide is based on controls and best practices found in the https://www.cisecurity.org/benchmark/kubernetes/[CIS Kubernetes Benchmark] from the Center for Internet Security.

The hardening guides provide prescriptive guidance for hardening a production installation of Rancher. See Rancher's guides for <<_the_cis_benchmark_and_self_assessment,Self Assessment of the CIS Kubernetes Benchmark>> for the full list of security controls.

____
The hardening guides describe how to secure the nodes in your cluster, and it is recommended to follow a hardening guide before installing Kubernetes.
____

Each version of the hardening guide is intended to be used with specific versions of the CIS Kubernetes Benchmark, Kubernetes, and Rancher.

== The CIS Benchmark and Self-Assessment

The benchmark self-assessment is a companion to the Rancher security hardening guide. While the hardening guide shows you how to harden the cluster, the benchmark guide is meant to help you evaluate the level of security of the hardened cluster.

This guide walks through the various controls and provide updated example commands to audit compliance in Rancher created clusters. The original benchmark documents can be downloaded from the https://www.cisecurity.org/benchmark/kubernetes/[CIS website].

Each version of Rancher's self-assessment guide corresponds to specific versions of the hardening guide, Rancher, Kubernetes, and the CIS Benchmark.

== Third-party Penetration Test Reports

Rancher periodically hires third parties to perform security audits and penetration tests of the Rancher software stack. The environments under test follow the Rancher provided hardening guides at the time of the testing. Previous penetration test reports are available below.

Results:

* https://releases.rancher.com/documents/security/pen-tests/2019/RAN-01-cure53-report.final.pdf[Cure53 Pen Test - July 2019]
* https://releases.rancher.com/documents/security/pen-tests/2019/UntamedTheory-Rancher_SecurityAssessment-20190712_v5.pdf[Untamed Theory Pen Test - March 2019]

Please note that new reports are no longer shared or made publicly available.

== Rancher Security Advisories and CVEs

Rancher is committed to informing the community of security issues in our products. For the list of CVEs (Common Vulnerabilities and Exposures) for issues we have resolved, refer to {xref-cves}[this page.]

== Kubernetes Security Best Practices

For recommendations on securing your Kubernetes cluster, refer to the https://kubernetes.io/docs/tasks/administer-cluster/securing-a-cluster/[Kubernetes Cluster Security Best Practices] guide.

== Rancher Security Best Practices

For recommendations on securing your Rancher Manager deployments, refer to the {xref-security-best-practices}[Rancher Security Best Practices] guide.

== Rancher Kubernetes Distributions (K3s/RKE2) Self-Assessment and Hardening Guides

Rancher uses the following Kubernetes distributions:

* https://documentation.suse.com/en-us/cloudnative/rke2/[*RKE2*] is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector.
* https://documentation.suse.com/en-us/cloudnative/k3s/[*K3s*] is a fully conformant, lightweight Kubernetes distribution. It is easy to install, with half the memory requirement of upstream Kubernetes, all in a binary of less than 100 MB.

To harden a Kubernetes cluster that's running a distribution other than those listed, refer to your Kubernetes provider's docs.

=== Hardening Guides and Benchmark Versions

Each self-assessment guide is accompanied by a hardening guide. These guides were tested alongside the listed Rancher releases. Each self-assessment guide was tested on a specific Kubernetes version and CIS benchmark version. If a CIS benchmark has not been validated for your Kubernetes version, you can use the existing guides until a guide for your version is added.

=== RKE2 Guides

|===
| Type | Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guide

| Standalone RKE2
| Kubernetes v1.27
| CIS v1.9
| {url-rke2-cis-self-assessment19}[Link]
| {url-rke2-hardening-guide}[Link]

| Standalone RKE2
| Kubernetes v1.28
| CIS v1.10
| {url-rke2-cis-self-assessment110}[Link]
| {url-rke2-hardening-guide}[Link]

| Standalone RKE2
| Kubernetes v1.29 to v1.31
| CIS v1.11
| {url-rke2-cis-self-assessment111}[Link]
| {url-rke2-hardening-guide}[Link]

| Standalone RKE2
| Kubernetes v1.32 and above
| CIS v1.12
| {url-rke2-cis-self-assessment112}[Link]
| {url-rke2-hardening-guide}[Link]
|===

=== K3s Guides

|===
| Type | Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guide

| Standalone K3s
| Kubernetes v1.27
| CIS v1.9
| {url-k3s-self-assessment-1.9}[Link]
| {url-k3s-hardening-guide}[Link]

| Standalone K3s
| Kubernetes v1.28
| CIS v1.10
| {url-k3s-self-assessment-1.10}[Link]
| {url-k3s-hardening-guide}[Link]

| Standalone K3s
| Kubernetes v1.29 to v1.31
| CIS v1.11
| {url-k3s-self-assessment-1.11}[Link]
| {url-k3s-hardening-guide}[Link]

| Standalone K3s
| Kubernetes v1.32 and above
| CIS v1.12
| {url-k3s-self-assessment-1.12}[Link]
| {url-k3s-hardening-guide}[Link]
|===
